# minecaptcha

./: Cargo.toml  README.md
src/: egui.rs  egui_render.rs  main.rs  renderer.rs  voxel.rs  wgpu.rs  win.rs
src/shaders/: voxel_shader.wgsl
