[package]
name = "minecaptcha"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui-wgpu = "0.29.1"
egui-winit = "0.29.1"
env_logger = "0.11.5"
futures = "0.3.31"
glam = "0.29.0"
log = "0.4.22"
nalgebra = "0.33.1"
transform-gizmo-egui = { git = "https://github.com/rowanfr/transform-gizmo", branch = "main" }
wgpu = "22.1.0"
winit = "0.30.5"
